When pipe1() calls pipe_create() and it fails, use the error result from pipe_create(), don't assume it will always be ENOMEM.

From PR 45423 by Greg Woods.